src/keycloak/.helm/templates/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-issuer
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o ./.helm/templates
    kompose.service.expose: keycloak.argiago.test
    kompose.service.expose.ingress-class-name: nginx
    kompose.service.expose.tls-secret: keycloak-secret
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.argiago.test
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - keycloak.argiago.test
      secretName: keycloak-secret
status:
  loadBalancer: {}
